Updated version of the dashboard

--- a/dashboard/templates/dashboard/foodstyles.html
+++ b/dashboard/templates/dashboard/foodstyles.html
@@ -93,10 +93,23 @@
                 y: {
                     beginAtZero: true,
                     ticks: {
+                        color: 'black',
                         font: {
-                            size: 18 // Set the font size here
+                            family: 'Montserrat', 
+                            weight: 'bold', // Make y-axis labels bold,
+                            size: 16 // Set the font size here
                         }
                     }                
+                },
+                x: {
+                    ticks: {
+                        color: 'black',
+                        font: {
+                            family: 'Montserrat', 
+                            weight: 'bold', // Make y-axis labels bold
+                            size: 18
+                        }
+                    }
                 }
             },
             plugins: {
