--- a/dashboard/templates/dashboard/foodstyles.html
+++ b/dashboard/templates/dashboard/foodstyles.html
@@ -96,7 +96,7 @@
                         color: 'black',
                         font: {
                             family: 'Montserrat', 
-                            weight: 'bold', // Make y-axis labels bold,
+                            //weight: 'bold', // Make y-axis labels bold,
                             size: 16 // Set the font size here
                         }
                     }                
@@ -171,6 +171,10 @@
     // Initialize the chart with initial data
     toggleData('Initial Data');
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'js/scripts.js' %} "></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
 </body>
 </html>
