stili alim changed fontsize

--- a/dashboard/templates/dashboard/foodstyles.html
+++ b/dashboard/templates/dashboard/foodstyles.html
@@ -96,8 +96,8 @@
                         color: 'black',
                         font: {
                             family: 'Montserrat', 
-                            //weight: 'bold', // Make y-axis labels bold,
-                            size: 16 // Set the font size here
+                            weight: 'bold', // Make y-axis labels bold,
+                            size: 14 // Set the font size here
                         }
                     }                
                 },
@@ -107,7 +107,7 @@
                         font: {
                             family: 'Montserrat', 
                             weight: 'bold', // Make y-axis labels bold
-                            size: 18
+                            size: 16
                         }
                     }
                 }
