--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -45,8 +45,12 @@
             <div class="container">
                 <div class="masthead-subheading invisible">.</div>
                 <div class="masthead-subheading invisible">.</div>
+                {% if user.is_authenticated %}
+                <div class="masthead-heading">Buongiorno, {{ user.first_name }}!</div>
+                {% endif %}
                 
                 <div class="masthead-heading text-uppercase">Benvenuto nella ricerca Yoodata!</div>
+
                 <!-- <div class="masthead-subheading">Buona lettura!</div> -->
                 <div class="masthead-heading text-uppercase invisible">.</div>
                 <a class="btn btn-success btn-xl text-uppercase" href="#services">Buona lettura!</a>
@@ -61,15 +65,16 @@
                     <!-- <h3 class="section-subheading text-muted">Some text about food styles.</h3> -->
                 </div>
                 <div class="row text-center">
-                    {% for foodstyle in foodstyles %}
+                    {% for foodstyle, is_visible in foodstyles_visibility %}
                         <div class="col-md-3">
                             <a href="{% url 'dashboard:foodstyle_detail' foodstyle.id %}">
                                 <span class="fa-stack fa-4x">
-                                    <img class="img-fluid {% if not foodstyle.is_visible %}dull{% endif %}" src="{{ foodstyle.image.url }}" alt="{{ foodstyle.title }}" width=140 />
+                                    <img class="img-fluid {% if not is_visible %}dull{% endif %}" src="{{ foodstyle.image.url }}" alt="{{ foodstyle.title }}" width=140 />
                                 </span>
                             </a>    
-                            <h4 class="my-3 {% if not foodstyle.is_visible %}dull{% endif %}">{{ foodstyle.title }}</h4>
+                            <h4 class="my-3 {% if not is_visible %}dull{% endif %}">{{ foodstyle.title }}</h4>
                                 <!-- <p class="text-muted invisible">{{ foodstyle.description }}</p> -->
+                                <p>{{ foodstyle_visible }}</p>
                                 <p class="text-muted invisible">Description</p>
                         </div>
                     {% endfor %}
@@ -85,7 +90,7 @@
                     <!-- <h3 class="section-subheading text-muted">Some text about the products.</h3> -->
                 </div>
                 <div class="row">
-                    {% for food in foods %}
+                    {% for food, is_visible in foods_visibility %}
                     {% if food.is_product %}
                     <div class="col-lg-2 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
@@ -94,10 +99,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid {% if not food.is_visible %}dull{% endif %}" src="{{ food.image.url }}" alt="{{ food.short_name }}" />
+                                <img class="img-fluid {% if not is_visible %}dull{% endif %}" src="{{ food.image.url }}" alt="{{ food.short_name }}" />
                             </a>
                             <div class="portfolio-caption">
-                                <p class="{% if not food.is_visible %}dull{% endif %}">{{ food.short_name }}</p> 
+                                <p class="{% if not is_visible %}dull{% endif %}">{{ food.short_name }}</p> 
                                 <!-- <div class="portfolio-caption-heading">{{ food.short_name }}</div> -->
                             </div>
                         </div>
@@ -131,19 +136,17 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <!-- <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase invisible">.</h2>
                     <h2 class="section-heading text-uppercase">IL NOSTRO FANTASTICO TEAM</h2>
-                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/amadori.png' %}" alt="Alessandro Amadori" />
                             <h4>Alessandro Amadori</h4>
-                            <!-- <p class="text-muted">Lead Designer</p> -->                        
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/alessandro-amadori-68820937/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -177,10 +180,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         
         <!-- Footer-->
-        <footer class="footer py-4">
+        <footer class="footer py-4 bg-light">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; <a href="https://yoodata.it">Yoodata</a> 2024</div>
@@ -195,7 +198,7 @@
         </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item  modal popup-->
-        {% for food in foods %}
+        {% for food, is_visible in foods_visibility %}
         <div class="portfolio-modal modal fade" id="portfolioModal{{ forloop.counter }}" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -207,10 +210,10 @@
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">{{ foodcat.title }}</h2>
                                     <p class="item-intro text-muted">{{ foodcat.description }}</p>
-                                    <img class="img-fixed {% if not food.is_visible %}dull{% endif %}" src="{{ food.image.url }}" alt="{{ food.title }}" width=400/>                                    
+                                    <img class="img-fixed {% if not is_visible %}dull{% endif %}" src="{{ food.image.url }}" alt="{{ food.title }}" width=400/>                                    
                                     <ul class="list-inline">
                                             <li>
-                                                <h4 class="{% if not food.is_visible %}dull{% endif %}">{{ food.title }}</h4>
+                                                <h4 class="{% if not is_visible %}dull{% endif %}">{{ food.title }}</h4>
                                             </li>                                    
                                     </ul>
                                     <a href="{% url 'dashboard:food_detail' food.id %}">
